@@ -131,6 +131,7 @@ v 8.12.0 (unreleased)
 
 v 8.11.6 (unreleased)
   - Fix an error where we were unable to create a CommitStatus for running state
+  - Restore SSH Key title auto-population behavior. !6186
 
 v 8.11.5
   - Optimize branch lookups and force a repository reload for Repository#find_branch. !6087
